--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col-6">
                         <p class="text-right text-muted mr-3 py-0 my-1">Don't have an account?</p>
-                        <p class="text-right text-muted mr-3 py-0 my-1">Go to our <a href="#">register <i class="fa fa-sign-in" aria-hidden="true"></i></a> page.</p>
+                        <p class="text-right text-muted mr-3 py-0 my-1">Go to our <a href="https://petarbegovic1701.github.io/Register-Panel/">register <i class="fa fa-sign-in" aria-hidden="true"></i></a> page.</p>
                     </div>
                 </div>
             </form>
